Update compile.sh